--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <br>
         <div class="coluna destaque tres centralizado"> 
 
-            <img class="imgeco" src="Img/img1.jpg" alt="onda">
+            <img class="imgeco" src="Img1.jpg" alt="onda">
             <br>
             <h4> Itacupiri </h4>
             <p> Rodovia Admar Gonzaga, 72 </p>
@@ -189,7 +189,7 @@
 
         <div class="coluna destaque tres centralizado"> 
 
-            <img class="imgeco" src="Img/img2.jpg" alt="tartaruga">
+            <img class="imgeco" src="Img2.jpg" alt="tartaruga">
             <br>
             <h4> Havai </h4>
             <p> Av. Groselia oliveira, 678 </p>
@@ -199,7 +199,7 @@
     
         <div class="coluna destaque tres centralizado"> 
 
-            <img class="imgeco" src="Img/img3.jpg" alt="praia">
+            <img class="imgeco" src="Img3.jpg" alt="praia">
             <br>
             <h4> Canasvieras </h4>
             <p> Rua Rodrigo faro, 76 </p>
@@ -214,7 +214,7 @@
         <h1 class="centralizado"> Sobre nós </h1>
 
         <div class="coluna">
-            <img class="imgsb" src="Img/Img4.jpg" alt="Mulher mexendo no computador">
+            <img class="imgsb" src="Img4.jpg" alt="Mulher mexendo no computador">
         </div>
 
         <div> 
